--- a/SECB/app/src/main/res/layout/event_item_card.xml
+++ b/SECB/app/src/main/res/layout/event_item_card.xml
@@ -1,123 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="@dimen/item_card_height"
     android:orientation="horizontal"
-    android:paddingTop="@dimen/event_card_margin"
     android:paddingBottom="@dimen/event_card_margin"
-    android:layout_marginRight="@dimen/event_card_margin"
-    android:weightSum="3"
-    >
+    android:paddingTop="@dimen/event_card_margin"
+    android:weightSum="3">
+
+    <ImageView
+        android:id="@+id/imgv_eventImg"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginRight="@dimen/event_card_margin"
+        android:layout_weight="1"
+        android:src="@drawable/event_card_img" />
+
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight="2"
         android:layout_height="match_parent"
+        android:layout_marginRight="@dimen/event_card_margin"
+        android:layout_weight="2"
         android:orientation="vertical"
-        android:layout_marginLeft="@dimen/event_card_margin"
-
         android:weightSum="2.5">
 
         <TextView
             android:id="@+id/txtv_eventTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="لقد قامت السعودية بتطوير المؤتمرات المنعقدة ليديها. لقد قامت السعودية بتطوير المؤتمرات المنعقدة ليديها."
-            android:textColor="@color/secb_dark_text"
-            android:textSize="@dimen/event_card_h1_text_size"
             android:layout_weight="1"
-            android:maxLines="2"
             android:ellipsize="end"
-            />
+            android:maxLines="2"
+            android:text="Saudi Arabia has enhanced the development of exhibitions."
+            android:textColor="@color/secb_dark_text"
+            android:textSize="@dimen/event_card_h1_text_size" />
 
         <TextView
             android:id="@+id/txtv_eventDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="لقد قامت السعودية بتطوير المؤتمرات المنعقدة ليديها.  لقد قامت السعودية بتطوير المؤتمرات المنعقدة ليديها."
-            android:textColor="@color/secb_grey_text"
-            android:textSize="@dimen/event_card_h2_text_size"
             android:layout_weight="1"
             android:ellipsize="end"
-            android:maxLines="2"/>
+            android:maxLines="2"
+            android:text="Saudi Arabia has enhanced the development of exhibitions."
+            android:textColor="@color/secb_grey_text"
+            android:textSize="@dimen/event_card_h2_text_size" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:weightSum="4.5"
-            android:layout_weight="0.5"
-            >
+            android:weightSum="4.5">
 
             <ImageView
                 android:id="@+id/imgv_event_timeIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/event_card_time_icon"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="0.5"/>
+                android:layout_weight="0.5"
+                android:src="@drawable/event_card_time_icon" />
 
             <TextView
                 android:id="@+id/txtv_event_timeValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="2:30 PM"
                 android:layout_gravity="center_vertical"
-                android:maxLines="1"
                 android:layout_weight="1"
                 android:ellipsize="end"
+                android:maxLines="1"
+                android:text="2:30 PM"
                 android:textColor="@color/secb_dark_text"
-                android:textSize="@dimen/event_card_h3_text_size"/>
+                android:textSize="@dimen/event_card_h3_text_size" />
 
             <ImageView
                 android:id="@+id/imgv_event_placeIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/event_card_place_icon"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="0.5"/>
+                android:layout_weight="0.5"
+                android:src="@drawable/event_card_place_icon" />
 
             <TextView
                 android:id="@+id/txtv_event_placeValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Jaddah"
                 android:layout_gravity="center_vertical"
-                android:maxLines="1"
                 android:layout_weight="1"
                 android:ellipsize="end"
+                android:maxLines="1"
+                android:text="Jaddah"
                 android:textColor="@color/secb_dark_text"
-                android:textSize="@dimen/event_card_h3_text_size"/>
+                android:textSize="@dimen/event_card_h3_text_size" />
 
             <ImageView
                 android:id="@+id/imgv_event_categoryIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/event_card_filter_icon"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="0.5"/>
+                android:layout_weight="0.5"
+                android:src="@drawable/event_card_filter_icon" />
 
             <TextView
                 android:id="@+id/txtv_event_categoryValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Organization"
                 android:layout_gravity="center_vertical"
-                android:maxLines="1"
                 android:layout_weight="1"
                 android:ellipsize="end"
+                android:maxLines="1"
+                android:text="Organization"
                 android:textColor="@color/secb_dark_text"
-                android:textSize="@dimen/event_card_h3_text_size"/>
+                android:textSize="@dimen/event_card_h3_text_size" />
         </LinearLayout>
     </LinearLayout>
-
-
-
-    <ImageView
-        android:id="@+id/imgv_eventImg"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/event_card_margin"
-        android:src="@drawable/event_card_img"/>
-
 </LinearLayout>
