--- a/SECB/app/src/main/res/layout/home_fragment.xml
+++ b/SECB/app/src/main/res/layout/home_fragment.xml
@@ -183,7 +183,7 @@
             android:orientation="vertical">
 
             <!--Title:services requests-->
-            <include layout="@layout/event_card"
+            <include layout="@layout/event_item_card"
                 android:layout_width="wrap_content"
                 android:layout_marginLeft="@dimen/event_card_margin"
                 android:layout_marginRight="@dimen/event_card_margin"
@@ -212,7 +212,7 @@
             android:layout_weight="0.5"/>
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/newsItemRecyclerView"
+            android:id="@+id/newsRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="@dimen/home_news_recycler_height"
             android:layout_marginTop="@dimen/home_graphs_card_padding"
