--- a/SECB/app/src/main/res/layout/location_list_fragment.xml
+++ b/SECB/app/src/main/res/layout/location_list_fragment.xml
@@ -9,7 +9,7 @@
 
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/eventsRecyclerView"
+        android:id="@+id/locationsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/home_graphs_card_padding"></android.support.v7.widget.RecyclerView>
