--- a/SECB/app/src/main/res/layout/news_list_fragment.xml
+++ b/SECB/app/src/main/res/layout/news_list_fragment.xml
@@ -9,7 +9,7 @@
 
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/newsItemRecyclerView"
+        android:id="@+id/newsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/home_graphs_card_padding"></android.support.v7.widget.RecyclerView>
