--- a/SECB/app/src/main/res/layout/organizer_item_card.xml
+++ b/SECB/app/src/main/res/layout/organizer_item_card.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/news_item_card_height"
+    android:layout_height="@dimen/item_card_height"
     android:layout_marginBottom="@dimen/event_card_margin"
     android:layout_marginTop="@dimen/event_card_margin"
     android:background="@color/white"
