--- a/SECB/app/src/main/res/values-mdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-mdpi/dimens.xml
@@ -87,4 +87,7 @@
     <dimen name="organizer_p_info_rows_margin">10dp</dimen> <!-- 30PX - HEIGHT -->
     <dimen name="organizer_details_margin">12dp</dimen> <!-- 35PX - HEIGHT -->
     <dimen name="organizer_details_margin_small">7dp</dimen> <!-- 20PX - HEIGHT -->
+
+    <dimen name="item_card_height">74dp</dimen> <!-- 210PX - HEIGHT -->
+
 </resources>
