done: events calendar

--- a/SECB/app/src/main/res/layout/eguide_home.xml
+++ b/SECB/app/src/main/res/layout/eguide_home.xml
@@ -31,7 +31,7 @@
             android:id="@+id/btn_location_eguide"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/sceb_orange"
+            android:background="@color/secb_orange"
             android:text="@string/location_eguide"
             android:textColor="@color/secb_dark_text"
             android:textSize="@dimen/eguide_base_text_size"
@@ -45,7 +45,7 @@
             android:id="@+id/btn_organizers_eguide"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/sceb_orange"
+            android:background="@color/secb_orange"
             android:text="@string/organizers_eguide"
             android:textColor="@color/secb_dark_text"
             android:textSize="@dimen/eguide_base_text_size"
