--- a/SECB/app/src/main/res/layout/reset_password.xml
+++ b/SECB/app/src/main/res/layout/reset_password.xml
@@ -44,7 +44,7 @@
         android:text="@string/resetPassword"
         android:textSize="@dimen/login_button_text_size"
         android:textColor="@color/secb_dark_text"
-        android:background="@color/sceb_orange"
+        android:background="@color/secb_orange"
         android:layout_marginTop="@dimen/login_forget_pass_vertical_margin"
         android:id="@+id/btn_resetPassword" />
 
