--- a/SECB/app/src/main/res/values-xhdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-xhdpi/dimens.xml
@@ -78,6 +78,10 @@
     <dimen name="event_details_iconed_info_icon_margin">8dp</dimen> <!-- 15PX - HEIGHT -->
     <dimen name="event_details_map_height">118dp</dimen> <!-- 235PX - HEIGHT -->
 
+    <dimen name="calendar_moth_text_size">16dp</dimen> <!-- 32PX - HEIGHT -->
+    <dimen name="calendar_week_text_size">13dp</dimen> <!-- 25PX - HEIGHT -->
+    <dimen name="calendar_moth_padding">10dp</dimen> <!-- 20PX - HEIGHT -->
+    <dimen name="calendar_viewAllEvents_text_size">11dp</dimen> <!-- 22PX - HEIGHT -->
 
     <dimen name="eguide_base_text_size">17dp</dimen> <!-- 33PX - HEIGHT -->
     <dimen name="eguide_base_padding">5dp</dimen> <!-- 10PX - HEIGHT -->
