--- a/SECB/app/src/main/res/values-mdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-mdpi/dimens.xml
@@ -67,6 +67,7 @@
     <dimen name="news_details_newTitle_text_container">35dp</dimen> <!-- 99PX - HEIGHT -->
     <dimen name="news_details_newDate_text_container">19dp</dimen> <!-- 55PX - HEIGHT -->
     <dimen name="news_details_text_container_padding">7dp</dimen> <!-- 20PX - HEIGHT -->
+
     <dimen name="event_details_map_height">83dp</dimen> <!-- 235PX - HEIGHT -->
     <dimen name="event_details_header_card_height">67dp</dimen> <!-- 190PX - HEIGHT -->
     <dimen name="event_details_iconed_info_space_width">42dp</dimen> <!-- 95PX - WIDTH -->
@@ -74,6 +75,12 @@
     <dimen name="event_details_iconed_info_margin">12dp</dimen> <!-- 34PX - HEIGHT -->
     <dimen name="event_details_text_size">8dp</dimen> <!-- 25PX - HEIGHT -->
     <dimen name="event_details_iconed_info_icon_margin">5dp</dimen> <!-- 15PX - HEIGHT -->
+
+    <dimen name="calendar_moth_text_size">11dp</dimen> <!-- 32PX - HEIGHT -->
+    <dimen name="calendar_week_text_size">8dp</dimen> <!-- 25PX - HEIGHT -->
+    <dimen name="calendar_moth_padding">7dp</dimen> <!-- 20PX - HEIGHT -->
+    <dimen name="calendar_viewAllEvents_text_size">7dp</dimen> <!-- 22PX - HEIGHT -->
+
 
     <dimen name="eguide_base_text_size">11dp</dimen> <!-- 33PX - HEIGHT -->
     <dimen name="eguide_base_padding">3dp</dimen> <!-- 10PX - HEIGHT -->
