--- a/SECB/app/src/main/res/values/colors.xml
+++ b/SECB/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
 
     <!--SECB colors-->
     <color name="sceb_dark_blue">#122d53</color>
-    <color name="sceb_orange">#e5952f</color>
+    <color name="secb_orange">#e5952f</color>
     <color name="sceb_grey">#6e6f79</color>
     <color name="sceb_blue">#0f305d</color>
 
@@ -23,6 +23,11 @@
 
 
     <color name="off_white">#e8e8e8</color>
+
+    <color name="calendar_bgcolor">#900b2a55</color>
+    <!--bb283D5D--><!--900045a5-->
+    <color name="calendar_header_bgcolor">#72B5D1</color>
+
 <!--text colors-->
     <color name="secb_dark_text">#122d53</color>
     <color name="secb_light_text">#ffffff</color>
