--- a/SECB/app/src/main/res/layout-ar/event_item_card.xml
+++ b/SECB/app/src/main/res/layout-ar/event_item_card.xml
@@ -7,6 +7,8 @@
     android:paddingBottom="@dimen/event_card_margin"
     android:layout_marginRight="@dimen/event_card_margin"
     android:weightSum="3"
+    android:background="@color/off_white"
+
     >
     <LinearLayout
         android:layout_width="0dp"
