--- a/SECB/app/src/main/res/layout-ar/news_item_card.xml
+++ b/SECB/app/src/main/res/layout-ar/news_item_card.xml
@@ -21,19 +21,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:maxLines="1"
             android:ellipsize="end"
+            android:gravity="bottom"
+            android:maxLines="1"
             android:text="لقد قامت السعودية بتطوير المؤتمرات المنعقدة ليديها. لقد قامت السعودية بتطوير المؤتمرات المنعقدة ليديها."
             android:textColor="@color/sceb_dark_blue"
-            android:textSize="@dimen/event_card_h1_text_size" />
+            android:textSize="@dimen/event_card_h1_text_size"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtv_newDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:maxLines="1"
             android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:maxLines="1"
             android:text="لقد قامت السعودية بتطوير المؤتمرات المنعقدة ليديها.  لقد قامت السعودية بتطوير المؤتمرات المنعقدة ليديها."
             android:textColor="@color/darkgrey_color"
             android:textSize="@dimen/event_card_h2_text_size" />
@@ -41,18 +44,18 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_weight="0.5">
+            android:layout_weight="0.5"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/txtv_newTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:gravity="left"
-                android:text="2:30 PM"
-                android:maxLines="1"
                 android:ellipsize="end"
+                android:gravity="left"
+                android:maxLines="1"
+                android:text="2:30 PM"
                 android:textColor="@color/darkgrey_color"
                 android:textSize="@dimen/event_card_h3_text_size" />
 
