--- a/SECB/app/src/main/res/layout/events_filter_screen.xml
+++ b/SECB/app/src/main/res/layout/events_filter_screen.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#aa000000"
     android:orientation="horizontal"
     android:weightSum="3"
-    android:background="#aa000000">
+    android:layout_alignParentBottom="true">
 
     <LinearLayout
         android:id="@+id/layout_dark_layer"
         android:layout_width="0dp"
-        android:layout_weight="1"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:clickable="true"
-        android:orientation="vertical">
-    </LinearLayout>
+        android:orientation="vertical"></LinearLayout>
+
     <View
         android:id="@+id/shadow"
         android:layout_width="2.3dp"
         android:layout_height="match_parent"
         android:layout_above="@+id/filter_container"
-        android:background="@drawable/shadow">
-    </View>
+        android:background="@drawable/shadow"></View>
+
     <LinearLayout
         android:id="@+id/filter_container"
         android:layout_width="0dp"
-        android:layout_weight="2"
         android:layout_height="match_parent"
+        android:layout_weight="2"
         android:background="@drawable/filter_bg"
         android:orientation="vertical"
         android:padding="@dimen/news_filter_padding">
@@ -44,22 +44,22 @@
             <TextView
                 android:id="@+id/txtv_city_filter_city_title"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
                 android:text="@string/filter_city"
                 android:textColor="@color/secb_dark_text"
-                android:gravity="center_vertical"
                 android:textSize="@dimen/news_filter_text_size" />
 
             <!--city value-->
             <EditText
                 android:id="@+id/txtv_city_filter_city_value"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:text="@string/filter_city"
-                android:textColor="@color/secb_grey_text"
+                android:layout_weight="1"
+                android:maxLines="1"
                 android:gravity="center_vertical"
+                android:textColor="@color/secb_grey_text"
                 android:textSize="@dimen/news_filter_text_size" />
 
         </TableRow>
@@ -75,24 +75,26 @@
             <TextView
                 android:id="@+id/txtv_news_filter_time_from_title"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
                 android:text="@string/filter_time_starts"
                 android:textColor="@color/secb_dark_text"
-                android:gravity="center_vertical"
                 android:textSize="@dimen/news_filter_text_size" />
 
             <!--from value-->
-            <EditText
+            <TextView
                 android:id="@+id/txtv_news_filter_time_from_value"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:text="@string/filter_time_from"
-                android:textColor="@color/secb_grey_text"
+                android:layout_weight="1"
                 android:gravity="center_vertical"
+                android:maxLines="1"
+                android:text="@string/filter_time_starts"
+                android:textColor="@color/secb_grey_text"
                 android:textSize="@dimen/news_filter_text_size" />
         </TableRow>
+
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -104,24 +106,24 @@
             <TextView
                 android:id="@+id/txtv_news_filter_time_to_title"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
                 android:text="@string/filter_time_ends"
                 android:textColor="@color/secb_dark_text"
-                android:gravity="center_vertical"
                 android:textSize="@dimen/news_filter_text_size" />
 
             <!--to value-->
-            <EditText
+            <TextView
                 android:id="@+id/txtv_news_filter_time_to_value"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="@string/filter_time_from"
+                android:layout_weight="1"
+                android:maxLines="1"
+                android:text="@string/filter_time_ends"
                 android:textColor="@color/secb_grey_text"
                 android:textSize="@dimen/news_filter_text_size" />
         </TableRow>
-
 
 
         <!--types title-->
@@ -191,7 +193,6 @@
             android:text="@string/filters_apply_filter"
             android:textColor="@color/secb_light_text"
             android:textSize="@dimen/news_filter_btn_text_size" />
-
 
     </LinearLayout>
 </LinearLayout>
