--- a/SECB/app/src/main/res/layout/events_list_fragment.xml
+++ b/SECB/app/src/main/res/layout/events_list_fragment.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/home_bg"
+    android:background="@color/white"
     android:paddingLeft="@dimen/home_graphs_card_padding"
     android:paddingRight="@dimen/home_graphs_card_padding">
 
