--- a/SECB/app/src/main/res/layout/location_item_card.xml
+++ b/SECB/app/src/main/res/layout/location_item_card.xml
@@ -4,8 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/item_card_height"
     android:orientation="horizontal"
-    android:layout_marginBottom="@dimen/event_card_margin"
-    android:layout_marginTop="@dimen/event_card_margin"
+    android:layout_marginBottom="@dimen/eguide_base_padding"
+    android:layout_marginTop="@dimen/eguide_base_padding"
+    android:padding="@dimen/eguide_base_padding"
     android:weightSum="3"
     android:background="@color/off_white">
 
@@ -32,9 +33,11 @@
             android:layout_weight="1"
             android:ellipsize="end"
             android:maxLines="2"
+            android:gravity="bottom"
             android:text="Saudi Arabia has enhanced the development of exhibitions."
             android:textColor="@color/secb_dark_text"
-            android:textSize="@dimen/event_card_h1_text_size" />
+            android:textSize="@dimen/event_card_h1_text_size"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/txtv_locationDescription"
@@ -43,6 +46,7 @@
             android:layout_weight="1"
             android:ellipsize="end"
             android:maxLines="2"
+            android:gravity="center_vertical"
             android:text="Saudi Arabia has enhanced the development of exhibitions."
             android:textColor="@color/secb_grey_text"
             android:textSize="@dimen/event_card_h2_text_size" />
