--- a/SECB/app/src/main/res/layout/location_personal_info.xml
+++ b/SECB/app/src/main/res/layout/location_personal_info.xml
@@ -29,7 +29,7 @@
         <TextView
             android:id="@+id/txtv_location_address_value"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
             android:textColor="@color/secb_grey_text"
@@ -61,7 +61,7 @@
         <TextView
             android:id="@+id/txtv_location_phone_value"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
             android:textColor="@color/secb_grey_text"
@@ -93,7 +93,7 @@
         <TextView
             android:id="@+id/txtv_location_email_value"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
             android:textColor="@color/secb_grey_text"
