--- a/SECB/app/src/main/res/layout/news_item_card.xml
+++ b/SECB/app/src/main/res/layout/news_item_card.xml
@@ -29,19 +29,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:maxLines="1"
             android:ellipsize="end"
+            android:gravity="bottom"
+            android:textStyle="bold"
+            android:maxLines="1"
             android:text="Saudi Arabia has enhanced the development of exhibitions."
             android:textColor="@color/sceb_dark_blue"
-            android:textSize="@dimen/event_card_h1_text_size" />
+            android:textSize="@dimen/event_card_h1_text_size"
+             />
 
         <TextView
             android:id="@+id/txtv_newDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:maxLines="1"
             android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:maxLines="1"
             android:text="Saudi Arabia has enhanced the development of exhibitions."
             android:textColor="@color/darkgrey_color"
             android:textSize="@dimen/event_card_h2_text_size" />
@@ -56,7 +60,6 @@
                 android:id="@+id/txtv_newTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
                 android:gravity="right"
                 android:maxLines="1"
                 android:text="2:30 PM"
