--- a/SECB/app/src/main/res/layout/organizer_details.xml
+++ b/SECB/app/src/main/res/layout/organizer_details.xml
@@ -1,69 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="3.5"
-    android:background="@color/white"
-    android:padding="@dimen/eguide_base_padding">
+    android:fillViewport="true">
 
-    <!--1-->
-
-    <ImageView
-        android:id="@+id/imgv_organizerImg"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:src="@drawable/news_img_sample"
-        android:layout_gravity="center_horizontal|top"
-        />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical"
-        android:background="@color/off_white"
-        android:layout_marginBottom="@dimen/organizer_details_margin_small">
-        <TextView
-            android:id="@+id/txtv_organizerName"
+        android:padding="@dimen/eguide_base_padding"
+        android:weightSum="3.5">
+
+        <!--1-->
+
+        <ImageView
+            android:id="@+id/imgv_organizerImg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/secb_dark_text"
-            android:text="@string/email_address"
-            android:layout_marginTop="@dimen/organizer_details_margin"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_weight="1"
+            android:src="@drawable/news_img_sample" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/organizer_details_margin_small"
-            android:layout_marginRight="@dimen/organizer_details_margin"
-            android:layout_marginLeft="@dimen/organizer_details_margin"/>
+            android:layout_weight="1"
+            android:background="@color/off_white"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/txtv_organizerDescription"
-            android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/txtv_organizerName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/organizer_details_margin_small"
+                android:layout_marginLeft="@dimen/organizer_details_margin"
+                android:layout_marginRight="@dimen/organizer_details_margin"
+                android:layout_marginTop="@dimen/organizer_details_margin"
+                android:text="@string/email_address"
+                android:textColor="@color/secb_dark_text" />
+
+            <TextView
+                android:id="@+id/txtv_organizerDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/organizer_details_margin"
+                android:layout_marginLeft="@dimen/organizer_details_margin"
+                android:layout_marginRight="@dimen/organizer_details_margin"
+                android:text="Saudi Arabia has enhanced the development of exhibitions."
+                android:textColor="@color/darkgrey_color"
+                android:textSize="@dimen/event_card_h2_text_size" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Saudi Arabia has enhanced the development of exhibitions."
-            android:textColor="@color/darkgrey_color"
-            android:textSize="@dimen/event_card_h2_text_size"
-            android:layout_marginRight="@dimen/organizer_details_margin"
-            android:layout_marginLeft="@dimen/organizer_details_margin"
-            android:layout_marginBottom="@dimen/organizer_details_margin"/>
+            android:layout_weight="1.0"
+            android:background="@color/off_white">
+
+            <include
+                android:id="@+id/organizer_personal_info"
+                layout="@layout/organizer_personal_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/organizer_details_margin_small"
+                android:layout_weight="1.0"
+                android:background="@color/off_white"
+                android:visibility="visible"
+
+                />
+        </LinearLayout>
+
     </LinearLayout>
-
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@color/off_white"
-    android:layout_weight="1.0">
-    <include
-        android:id="@+id/organizer_personal_info"
-        layout="@layout/organizer_personal_info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1.0"
-        android:visibility="visible"
-        android:background="@color/off_white"
-        android:layout_margin="@dimen/organizer_details_margin_small"
-
-        />
-</LinearLayout>
-
-</LinearLayout>
+</ScrollView>
