--- a/SECB/app/src/main/res/values-hdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-hdpi/dimens.xml
@@ -97,4 +97,8 @@
 
     <dimen name="item_card_height">84dp</dimen> <!-- 210PX - HEIGHT -->
 
+    <dimen name="gallery_item_text_size">10dp</dimen> <!-- 25PX - HEIGHT -->
+    <dimen name="gallery_item_text_padding">6dp</dimen> <!-- 16PX - HEIGHT -->
+    <dimen name="gallery_item_card_width">135dp</dimen> <!-- 340PX - HEIGHT -->
+    <dimen name="gallery_item_card_height">110dp</dimen> <!-- 278PX - HEIGHT -->
 </resources>
