--- a/SECB/app/src/main/res/values-mdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-mdpi/dimens.xml
@@ -97,4 +97,10 @@
 
     <dimen name="item_card_height">74dp</dimen> <!-- 210PX - HEIGHT -->
 
+    <dimen name="gallery_item_text_size">8dp</dimen> <!-- 25PX - HEIGHT -->
+    <dimen name="gallery_item_text_padding">5dp</dimen> <!-- 16PX - HEIGHT -->
+    <dimen name="gallery_item_card_width">120dp</dimen> <!-- 340PX - HEIGHT -->
+    <dimen name="gallery_item_card_height">98dp</dimen> <!-- 278PX - HEIGHT -->
+
+
 </resources>
