--- a/SECB/app/src/main/res/values-xhdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-xhdpi/dimens.xml
@@ -97,4 +97,9 @@
     <dimen name="organizer_details_margin_small">10dp</dimen> <!-- 20PX - HEIGHT -->
     <dimen name="item_card_height">105dp</dimen> <!-- 210PX - HEIGHT -->
 
+
+    <dimen name="gallery_item_text_size">13dp</dimen> <!-- 25PX - HEIGHT -->
+    <dimen name="gallery_item_text_padding">8dp</dimen> <!-- 16PX - HEIGHT -->
+    <dimen name="gallery_item_card_width">170dp</dimen> <!-- 340PX - HEIGHT -->
+    <dimen name="gallery_item_card_height">139dp</dimen> <!-- 278PX - HEIGHT -->
 </resources>
